# toys

./: .gitignore  README.md  README.md.tmpl  TODO.md  justfile  pyproject.toml
toys/_template/: README.md
toys/aws_sns_cloudwatch/: README.md  ec2.tf  main.tf  notification.tf  sns.tf
toys/code_api_DC/: Dockerfile  README.md  api.py  docker-compose.yaml
toys/code_data_stream/: Dockerfile  README.md  docker-compose.yaml  generate.py  signal.py  stream_data.py
toys/code_python/: Dockerfile_graphql_strawberry  README.md  constants.py  justfile  pydantic_example.py
toys/code_python/great_expectations/: Dockerfile  gx.ipynb  gx_example.py  start.sh
toys/code_python/pq_pyarrow/: README.md  generate_parquet.py  sample.ipynb
toys/code_python/pydantic_v1/: pydantic_v1_example.py
toys/code_python/strawberry_graphql/: Dockerfile  graphql_strawberry.py  justfile  library.csv
toys/cron_airflow/: README.md
toys/cron_airflow_DC/: .gitignore  README.md  docker-compose.yaml  justfile
toys/cron_airflow_DC/logs/scheduler/: latest
toys/cron_prefect/: README.md
toys/cron_prefect/flow_example/: deployment.py  example_names.py  tutorial_1.py
toys/cron_prefect_DC/: README.md  example.py
toys/cron_prefect_DC/flow_example/: deployment.py  tutorial_1.py
toys/db_postgres/: README.md  docker-compose.yaml  init.sql  make_example_table.py  make_random_table.py
toys/db_postgres_k8s/: README.md  justfile  values.yaml
toys/k8s_helm_sample_chart/: Chart.yaml  README.md  values.yaml
toys/k8s_helm_sample_chart/templates/: _helpers.tpl  configmap.yaml
toys/log_grafana/: README.md  docker-compose.yaml
toys/log_grafana/api_py/: Dockerfile-Py  api.py  pinger.py  requirements.txt
toys/log_grafana/configs/grafana/: grafana.ini
toys/log_grafana/configs/prometheus/: jobs.yml
toys/log_grafana/data_sources/: datasource.json
toys/log_grafana/trino_postgres/: README.md
toys/log_grafana/trino_postgres/http_listener/: Dockerfile  app.py
toys/log_grafana/trino_postgres/trino_config/: config.properties  http-event-listener.properties
toys/log_graylog/: README.md  docker-compose.yaml
toys/mlops_mlflow_DC/: docker-compose.yaml  example.py
toys/qe_trino_DC/: README.md  docker-compose.yaml  init.sql  justfile
toys/qe_trino_DC/trino/catalog/: postgresql.properties
toys/qe_trino_DC/trino_config/: config.properties  jvm.config
toys/sec_sops/: README.md  main.tf
toys/stream_kafka_DC/: Dockerfile_consumer  Dockerfile_producer  README.md  config.py  consumer.py  docker-compose.yaml  init.sql  justfile  producer.py
toys/tf_sample_module/: README.md  main.tf  outputs.tf
toys/tf_sample_module/sample-module/: main.tf
